@@ -247,23 +247,23 @@ static void
 istream_pipe_read(istream_t istream)
 {
     struct istream_pipe *p = istream_to_pipe(istream);
+    istream_direct_t mask;
 
-    if (unlikely(p->input == NULL)) {
-        assert(p->piped > 0);
+    if (p->piped > 0 && (pipe_consume(p) <= 0 || p->piped > 0))
+        return;
 
-        pipe_consume(p);
-    } else {
-        /* XXX is this update required? */
-        istream_direct_t mask = p->output.handler_direct;
-        if (mask & ISTREAM_PIPE)
-            /* if the handler supports the pipe, we offer our
-               services */
-            mask |= ISTREAM_TO_PIPE;
+    /* at this point, the pipe must be flushed - if the pipe is
+       flushed, this stream is either closed or there must be an input
+       stream */
+    assert(p->input != NULL);
 
-        istream_handler_set_direct(p->input, mask);
+    mask = p->output.handler_direct;
+    if (mask & ISTREAM_PIPE)
+        /* if the handler supports the pipe, we offer our services */
+        mask |= ISTREAM_TO_PIPE;
 
-        istream_read(p->input);
-    }
+    istream_handler_set_direct(p->input, mask);
+    istream_read(p->input);
 }
 
 static void
